--- a/kubernetes/app.yaml
+++ b/kubernetes/app.yaml
@@ -18,7 +18,7 @@ spec:
         app: app
     spec:
       containers:
-      - image: atugroup1/app:20250301171801
+      - image: ye1234/multiclouddrapp:20250716114343
         name: app-container
         workingDir: /var/www
         ports:
