--- a/kubernetes/GKECluster/web-service.yaml
+++ b/kubernetes/GKECluster/web-service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: web
+  annotations: 
+    cloud.google.com/load-balancer-type: "External"
   labels:
     app: web
 spec:
@@ -12,6 +14,7 @@ spec:
     port: 80
     targetPort: 80
     nodePort: 30005
-  type: NodePort
-  #type: LoadBalancer
+  #type: NodePort
+  type: LoadBalancer
+  loadBalancerIP: 35.206.97.188
 
