AKS Infra Provision Testing

--- a/.github/workflows/AKSInfraProvisioning.yml
+++ b/.github/workflows/AKSInfraProvisioning.yml
@@ -56,7 +56,7 @@ jobs:
             echo "CHANGES=false" >> $GITHUB_ENV
           fi
 
-      # - name: Terraform Apply
-      #   if: env.CHANGES == 'true'
-      #   run: terraform apply -auto-approve tfplan.binary
-      #   working-directory: terraform/Azure
+      - name: Terraform Apply
+        if: env.CHANGES == 'true'
+        run: terraform apply -auto-approve tfplan.binary
+        working-directory: terraform/Azure
