--- a/.github/workflows/AKSInfraProvisioning.yml
+++ b/.github/workflows/AKSInfraProvisioning.yml
@@ -57,6 +57,6 @@ jobs:
           fi
 
       - name: Terraform Apply
-        if: env.CHANGES == 'true'
+        #if: env.CHANGES == 'true'
         run: terraform apply -auto-approve tfplan.binary
         working-directory: terraform/Azure
