--- a/.github/workflows/AKSInfraProvisioning.yml
+++ b/.github/workflows/AKSInfraProvisioning.yml
@@ -61,6 +61,14 @@ jobs:
         run: terraform apply -auto-approve tfplan.binary
         working-directory: terraform/Azure
 
+      - name: Azure Login
+        #if: env.CHANGES == 'true'
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
       - name: Get AKS Credentials
        # if: env.CHANGES == 'true'
         run: |
