--- a/.github/workflows/AKSInfraProvisioning.yml
+++ b/.github/workflows/AKSInfraProvisioning.yml
@@ -6,6 +6,10 @@ on:
       - pipelinetest
   workflow_dispatch:
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   terraform:
     name: Terraform Plan and Apply For AKS
