--- a/.github/workflows/AKSInfraProvisioning.yml
+++ b/.github/workflows/AKSInfraProvisioning.yml
@@ -6,10 +6,6 @@ on:
       - pipelinetest
   workflow_dispatch:
 
-permissions:
-  id-token: write
-  contents: read
-
 jobs:
   terraform:
     name: Terraform Plan and Apply For AKS
@@ -66,12 +62,15 @@ jobs:
         working-directory: terraform/Azure
 
       - name: Azure Login
-        #if: env.CHANGES == 'true'
+     #   if: env.CHANGES == 'true'
         uses: azure/login@v1
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          allow-no-subscriptions: true
+          auth-type: 'service-principal'
+          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
 
       - name: Get AKS Credentials
        # if: env.CHANGES == 'true'
