--- a/.github/workflows/MultiCloudDRPipeline.yml
+++ b/.github/workflows/MultiCloudDRPipeline.yml
@@ -1,14 +1,75 @@
-name: Terraform AKS Plan & Apply
+name: Multi Cloud DR Pipeline
 
 on:
   push:
     branches:
-      - main
+      - pipelinetest
   workflow_dispatch:
 
 jobs:
+  Laravel-Application-Build-Test-Pushed:
+    runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.set_version.outputs.VERSION }}
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Start Docker Compose Services
+        run: |
+          docker compose up -d --build
+
+      - name: Wait for all Containers to Be Ready
+        run: sleep 5
+
+      - name: Show Docker Compose Images
+        run: docker compose images
+
+      - name: Install Dependencies
+        run: docker compose exec app composer install
+
+      - name: Generate Laravel APP_KEY
+        run: docker compose exec app php artisan key:generate
+
+      - name: Run Migrations
+        run: docker compose exec app php artisan migrate --force
+
+      - name: Run Tests
+        run: docker compose exec app php artisan test
+
+      - name: Stop and Remove Containers
+        run: docker compose down
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Set Version
+        id: set_version
+        run: |
+          echo "VERSION=$(date +%Y%m%d%H%M%S)" >> $GITHUB_ENV
+          echo "VERSION=$(date +%Y%m%d%H%M%S)" >> $GITHUB_OUTPUT
+
+      - name: Push App Image
+        run: |
+          docker tag ieee32675multiclouddr-app ${{ secrets.DOCKER_USERNAME }}/multiclouddrapp:$VERSION
+          docker push ${{ secrets.DOCKER_USERNAME }}/multiclouddrapp:$VERSION
+      
+          docker tag ieee32675multiclouddr-web ${{ secrets.DOCKER_USERNAME }}/multiclouddrweb:$VERSION
+          docker push ${{ secrets.DOCKER_USERNAME }}/multiclouddrweb:$VERSION
+      
+          docker tag ieee32675multiclouddr-database ${{ secrets.DOCKER_USERNAME }}/multiclouddrdatabase:$VERSION
+          docker push ${{ secrets.DOCKER_USERNAME }}/multiclouddrdatabase:$VERSION
+
+
   AKS-Infrastructure-Provisioning-With-Terraform:
     name: Terraform Plan and Apply For AKS
+    needs: Laravel-Application-Build-Test-Pushed
     runs-on: ubuntu-latest
 
     env:
@@ -62,7 +123,7 @@ jobs:
         working-directory: terraform/Azure
 
   Deploy-Application-To-AKS:
-    needs: Build-Test-Pushed
+    needs: AKS-Infrastructure-Provisioning-With-Terraform
     runs-on: ubuntu-latest
     env:
       VERSION: ${{ needs.Build-Test-Pushed.outputs.version }}
