--- a/.github/workflows/MultiCloudDRPipeline.yml
+++ b/.github/workflows/MultiCloudDRPipeline.yml
@@ -74,7 +74,7 @@ jobs:
     needs: Laravel-Application-Build-Test-Pushed
     runs-on: ubuntu-latest
     outputs:
-     version: $VERSION
+     version: ${{ needs.Laravel-Application-Build-Test-Pushed.outputs.version }}
     env:
       ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
       ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
