--- a/.github/workflows/MultiCloudDRPipeline.yml
+++ b/.github/workflows/MultiCloudDRPipeline.yml
@@ -240,13 +240,14 @@ jobs:
       - name: Set up gcloud CLI
         uses: google-github-actions/setup-gcloud@v2
 
-      - name: Install gke-gcloud-auth-plugin
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
+      # - name: Install gke-gcloud-auth-plugin
+      #   run: |
+      #     sudo apt-get update
+      #     sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
 
       - name: Get GKE credentials
         run: |
+          export USE_GKE_GCLOUD_AUTH_PLUGIN=False
           gcloud container clusters get-credentials "$CLUSTER_NAME" \
             --region "$CLUSTER_REGION" \
             --project "$PROJECT_ID"
