--- a/.github/workflows/velerobackupgke.yml
+++ b/.github/workflows/velerobackupgke.yml
@@ -22,13 +22,34 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Set up gcloud CLI
-        uses: google-github-actions/setup-gcloud@v2
-
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+
+      - name: Set up gcloud CLI
+        uses: google-github-actions/setup-gcloud@v2
+
+      - name: Install gke-gcloud-auth-plugin
+        run: |
+         gcloud components list
+         echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
+         curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
+          sudo apt update
+          sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
+
+      - name: Get GKE credentials
+        run: |
+          gcloud container clusters get-credentials "$CLUSTER_NAME" \
+            --region "$CLUSTER_REGION" \
+            --project "$PROJECT_ID"
+
+      - name: Verify GKE Access
+        run: |
+          kubectl cluster-info
+          kubectl get nodes
+          kubectl get pods
+          kubectl get svc
 
       - name: Install Velero CLI
         run: |
@@ -39,11 +60,11 @@ jobs:
         run: |
           echo '${{ secrets.VELERO_GCP_CREDENTIALS }}' > credentials-velero.json
 
-      - name: Get GKE Credentials
-        run: |
-          gcloud container clusters get-credentials "$CLUSTER_NAME" \
-            --region "$CLUSTER_REGION" \
-            --project "$PROJECT_ID"
+      # - name: Get GKE Credentials
+      #   run: |
+      #     gcloud container clusters get-credentials "$CLUSTER_NAME" \
+      #       --region "$CLUSTER_REGION" \
+      #       --project "$PROJECT_ID"
 
       - name: Install Velero
         run: |
