--- a/.github/workflows/velerobackupgke.yml
+++ b/.github/workflows/velerobackupgke.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  velero-backup:
+  GKE-Cluster-velero-backup:
     runs-on: ubuntu-latest
 
     env:
@@ -68,16 +68,21 @@ jobs:
 
       - name: Install Velero
         run: |
+          velero install \
+            --provider gcp \
+            --plugins velero/velero-plugin-for-gcp:v1.8.2 \
+            --bucket velero-backup-gke-cluster \
+            --backup-location-config serviceAccount=velero@$PROJECT_ID.iam.gserviceaccount.com \
+            --secret-file ./credentials-velero.json \
+            --use-node-agent \
+            --velero-pod-cpu-request=200m \
+            --velero-pod-mem-request=128Mi \
+            --node-agent-pod-cpu-request=200m \
+            --node-agent-pod-mem-request=256Mi
 
-            velero install \
-              --provider gcp \
-              --plugins velero/velero-plugin-for-gcp:v1.8.2 \
-              --bucket velero-backup-gke-cluster \
-              --backup-location-config serviceAccount=velero@$PROJECT_ID.iam.gserviceaccount.com \
-              --secret-file ./credentials-velero.json \
-              --use-node-agent
-
-
+      - name: Wait Velero Agent To be Ready
+        run: |
+         sleep 20
       - name: Trigger Backup
         run: |
           TIMESTAMP=$(date +%Y%m%d%H%M)
@@ -86,7 +91,3 @@ jobs:
       - name: Show Backups
         run: velero backup get
 
-          # if ! kubectl get ns velero; then
-                  # else
-          #   echo "Velero is already installed"
-          # fi
