--- a/.github/workflows/velerobackupgke.yml
+++ b/.github/workflows/velerobackupgke.yml
@@ -9,65 +9,129 @@ on:
   workflow_dispatch:
 
 jobs:
-  GKE-Cluster-velero-backup:
+  # GKE-Cluster-velero-backup:
+  #   runs-on: ubuntu-latest
+
+  #   env:
+  #     BUCKET_NAME: velero-backup-gke-cluster
+  #     PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+  #     CLUSTER_NAME: gke-laravel-dr
+  #     CLUSTER_REGION: us-central1
+
+  #   steps:
+  #     - name: Checkout Code
+  #       uses: actions/checkout@v3
+
+  #     - name: Authenticate to Google Cloud
+  #       uses: google-github-actions/auth@v2
+  #       with:
+  #         credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+
+  #     - name: Set up gcloud CLI
+  #       uses: google-github-actions/setup-gcloud@v2
+
+  #     - name: Install gke-gcloud-auth-plugin
+  #       run: |
+  #        gcloud components list
+  #        echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
+  #        curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
+  #         sudo apt update
+  #         sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
+
+  #     - name: Get GKE credentials
+  #       run: |
+  #         gcloud container clusters get-credentials "$CLUSTER_NAME" \
+  #           --region "$CLUSTER_REGION" \
+  #           --project "$PROJECT_ID"
+
+  #     - name: Verify GKE Access
+  #       run: |
+  #         kubectl cluster-info
+  #         kubectl get nodes
+  #         kubectl get pods
+  #         kubectl get svc
+
+  #     - name: Install Velero CLI
+  #       run: |
+  #         curl -L https://github.com/vmware-tanzu/velero/releases/download/v1.13.2/velero-v1.13.2-linux-amd64.tar.gz | tar -xz
+  #         sudo mv velero-v1.13.2-linux-amd64/velero /usr/local/bin
+
+  #     - name: Write Velero credentials to file
+  #       run: |
+  #         echo '${{ secrets.VELERO_GCP_CREDENTIALS }}' > credentials-velero.json
+
+  #     - name: Install Velero
+  #       run: |
+  #         velero install \
+  #           --provider gcp \
+  #           --plugins velero/velero-plugin-for-gcp:v1.8.2 \
+  #           --bucket "$BUCKET_NAME" \
+  #           --backup-location-config serviceAccount=velero@$PROJECT_ID.iam.gserviceaccount.com \
+  #           --secret-file ./credentials-velero.json \
+  #           --use-node-agent \
+  #           --default-volumes-to-fs-backup \
+  #           --velero-pod-cpu-request=200m \
+  #           --velero-pod-mem-request=128Mi \
+  #           --node-agent-pod-cpu-request=200m \
+  #           --node-agent-pod-mem-request=256Mi
+
+  #     - name: Wait Velero Agent To be Ready
+  #       run: |
+  #        sleep 10
+  #     - name: Trigger Backup
+  #       run: |
+  #         TIMESTAMP=$(date +%Y%m%d%H%M)
+  #         velero backup create daily-backup-$TIMESTAMP --include-namespaces default
+
+  #     - name: Wait Backup Process
+  #       run: |
+  #        sleep 10
+
+  #     - name: Show Backups
+  #       run: velero backup get
+
+ AKS-Cluster-velero-backup:
     runs-on: ubuntu-latest
 
     env:
-      BUCKET_NAME: velero-backup-gke-cluster
-      PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-      CLUSTER_NAME: gke-laravel-dr
-      CLUSTER_REGION: us-central1
+      CLUSTER_NAME: aks-multicloud-dr
+      RESOURCE_GROUP: my-tfstate-rg
+      AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      STORAGE_ACCOUNT_NAME: velerobackupstorageacc
+      CONTAINER_NAME: velero
 
     steps:
-      - name: Checkout Code
+      - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v2
+      - name: Azure Login
+        uses: azure/login@v1
         with:
-          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Set up gcloud CLI
-        uses: google-github-actions/setup-gcloud@v2
-
-      - name: Install gke-gcloud-auth-plugin
-        run: |
-         gcloud components list
-         echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
-         curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
-          sudo apt update
-          sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
-
-      - name: Get GKE credentials
-        run: |
-          gcloud container clusters get-credentials "$CLUSTER_NAME" \
-            --region "$CLUSTER_REGION" \
-            --project "$PROJECT_ID"
-
-      - name: Verify GKE Access
-        run: |
-          kubectl cluster-info
-          kubectl get nodes
-          kubectl get pods
-          kubectl get svc
+      - name: Set AKS Credentials
+        uses: azure/aks-set-context@v3
+        with:
+          resource-group: ${{ env.RESOURCE_GROUP }}
+          cluster-name: ${{ env.CLUSTER_NAME }}
 
       - name: Install Velero CLI
         run: |
           curl -L https://github.com/vmware-tanzu/velero/releases/download/v1.13.2/velero-v1.13.2-linux-amd64.tar.gz | tar -xz
           sudo mv velero-v1.13.2-linux-amd64/velero /usr/local/bin
 
-      - name: Write Velero credentials to file
+      - name: Write Velero Azure credentials
         run: |
-          echo '${{ secrets.VELERO_GCP_CREDENTIALS }}' > credentials-velero.json
+          echo '${{ secrets.AZURE_CREDENTIALS }}' > credentials-velero-azure.json
 
-      - name: Install Velero
+      - name: Install Velero to AKS
         run: |
           velero install \
-            --provider gcp \
-            --plugins velero/velero-plugin-for-gcp:v1.8.2 \
-            --bucket "$BUCKET_NAME" \
-            --backup-location-config serviceAccount=velero@$PROJECT_ID.iam.gserviceaccount.com \
-            --secret-file ./credentials-velero.json \
+            --provider azure \
+            --plugins velero/velero-plugin-for-microsoft-azure:v1.7.0 \
+            --bucket $CONTAINER_NAME \
+            --secret-file ./credentials-velero-azure.json \
+            --backup-location-config resourceGroup=${{ env.RESOURCE_GROUP }},storageAccount=$STORAGE_ACCOUNT_NAME \
             --use-node-agent \
             --default-volumes-to-fs-backup \
             --velero-pod-cpu-request=200m \
@@ -75,18 +139,13 @@ jobs:
             --node-agent-pod-cpu-request=200m \
             --node-agent-pod-mem-request=256Mi
 
-      - name: Wait Velero Agent To be Ready
-        run: |
-         sleep 10
+      - name: Wait for Velero to be Ready
+        run: sleep 20
+
       - name: Trigger Backup
         run: |
           TIMESTAMP=$(date +%Y%m%d%H%M)
-          velero backup create daily-backup-$TIMESTAMP --include-namespaces default
-
-      - name: Wait Backup Process
-        run: |
-         sleep 10
+          velero backup create aks-backup-$TIMESTAMP --include-namespaces default
 
       - name: Show Backups
         run: velero backup get
-
