--- a/.github/workflows/velerobackupgke.yml
+++ b/.github/workflows/velerobackupgke.yml
@@ -95,10 +95,14 @@ jobs:
 
     env:
       CLUSTER_NAME: aks-multicloud-dr
-      RESOURCE_GROUP: my-tfstate-rg
+      RESOURCE_GROUP: Velero_Backups
       AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-      STORAGE_ACCOUNT_NAME: veleroserviceacc
+      STORAGE_ACCOUNT_NAME: velero024cbb252124
       CONTAINER_NAME: velero
+      AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+      AZURE_RESOURCE_GROUP: MC_my-tfstate-rg_aks-multicloud-dr_eastus
+      AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CREDENTIALS }}
+      AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
 
     steps:
       - name: Checkout
@@ -109,29 +113,33 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Set AKS Credentials
-        uses: azure/aks-set-context@v3
-        with:
-          resource-group: ${{ env.RESOURCE_GROUP }}
-          cluster-name: ${{ env.CLUSTER_NAME }}
+      # - name: Set AKS Credentials
+      #   uses: azure/aks-set-context@v3
+      #   with:
+      #     resource-group: ${{ env.RESOURCE_GROUP }}
+      #     cluster-name: ${{ env.CLUSTER_NAME }}
 
       - name: Install Velero CLI
         run: |
-          curl -L https://github.com/vmware-tanzu/velero/releases/download/v1.13.2/velero-v1.13.2-linux-amd64.tar.gz | tar -xz
-          sudo mv velero-v1.13.2-linux-amd64/velero /usr/local/bin
+          curl -L https://github.com/vmware-tanzu/velero/releases/download/v1.16.1/velero-v1.16.1-linux-amd64.tar.gz | tar -xz
+          sudo mv velero-v1.16.1-linux-amd64/velero /usr/local/bin
 
       - name: Write Velero Azure credentials
         run: |
-          echo '${{ secrets.AZURE_CREDENTIALS }}' > credentials-velero-azure.json
-          echo "AZURE_STORAGE_ACCOUNT_ACCESS_KEY=${{ secrets.AZURE_STORAGE_KEY }}" > credentials-velero.txt
-
+          cat << EOF  > ./credentials-velero
+          AZURE_SUBSCRIPTION_ID=${AZURE_SUBSCRIPTION_ID}
+          AZURE_TENANT_ID=${AZURE_TENANT_ID}
+          AZURE_CLIENT_ID=${AZURE_CLIENT_ID}
+          AZURE_CLIENT_SECRET=${AZURE_CLIENT_SECRET}
+          AZURE_RESOURCE_GROUP=${AZURE_RESOURCE_GROUP}
+          EOF
       - name: Install Velero to AKS
         run: |
           velero install \
             --provider azure \
             --plugins velero/velero-plugin-for-microsoft-azure:v1.7.0 \
             --bucket $CONTAINER_NAME \
-            --secret-file ./credentials-velero.txt \
+            --secret-file ./credentials-velero \
             --backup-location-config resourceGroup=${{ env.RESOURCE_GROUP }},storageAccount=$STORAGE_ACCOUNT_NAME \
             --use-node-agent \
             --default-volumes-to-fs-backup \
@@ -141,12 +149,15 @@ jobs:
             --node-agent-pod-mem-request=256Mi
 
       - name: Wait for Velero to be Ready
-        run: sleep 20
+        run: sleep 10
 
       - name: Trigger Backup
         run: |
           TIMESTAMP=$(date +%Y%m%d%H%M)
           velero backup create aks-backup-$TIMESTAMP --include-namespaces default
+
+      - name: Wait for Velero Backup
+        run: sleep 20
 
       - name: Show Backups
         run: velero backup get
