--- a/.github/workflows/velerobackupgke.yml
+++ b/.github/workflows/velerobackupgke.yml
@@ -105,6 +105,7 @@ jobs:
       AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
       AKS_RESOURCE_GROUP: my-tfstate-rg
       AKS_VELERO_SECRET: ${{ secrets.AZURE_VELERO_SECRET }}
+      AZURE_VELERO_CLIENT_ID: ${{ secrets.AZURE_VELERO_CLIENT_ID }}
 
     steps:
       - name: Checkout
@@ -132,7 +133,7 @@ jobs:
           cat << EOF > credentials/cloud
           AZURE_SUBSCRIPTION_ID=${AZURE_SUBSCRIPTION_ID}
           AZURE_TENANT_ID=${AZURE_TENANT_ID}
-          AZURE_CLIENT_ID=${AZURE_CLIENT_ID}
+          AZURE_CLIENT_ID=${AZURE_VELERO_CLIENT_ID}
           AZURE_CLIENT_SECRET=${AZURE_VELERO_SECRET}
           AZURE_RESOURCE_GROUP=${AZURE_RESOURCE_GROUP}
           EOF
@@ -145,7 +146,6 @@ jobs:
             --secret-file ./credentials/cloud \
             --backup-location-config resourceGroup=${{ env.RESOURCE_GROUP }},storageAccount=$STORAGE_ACCOUNT_NAME \
             --use-node-agent \
-            --default-volumes-to-fs-backup \
             --velero-pod-cpu-request=200m \
             --velero-pod-mem-request=128Mi \
             --node-agent-pod-cpu-request=200m \
