--- a/.github/workflows/velerobackupgke.yml
+++ b/.github/workflows/velerobackupgke.yml
@@ -95,17 +95,10 @@ jobs:
 
     env:
       CLUSTER_NAME: aks-multicloud-dr
-      RESOURCE_GROUP: Velero_Backups
+      RESOURCE_GROUP: MC_my-tfstate-rg_aks-multicloud-dr_eastus
       AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-      STORAGE_ACCOUNT_NAME: velero024cbb252124
+      STORAGE_ACCOUNT_NAME: veleroaksbackupstorage
       CONTAINER_NAME: velero
-      AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-      AZURE_RESOURCE_GROUP: MC_my-tfstate-rg_aks-multicloud-dr_eastus
-      AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CREDENTIALS }}
-      AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-      AKS_RESOURCE_GROUP: my-tfstate-rg
-      AKS_VELERO_SECRET: ${{ secrets.AZURE_VELERO_SECRET }}
-      AZURE_VELERO_CLIENT_ID: ${{ secrets.AZURE_VELERO_CLIENT_ID }}
 
     steps:
       - name: Checkout
@@ -119,48 +112,40 @@ jobs:
       - name: Set AKS Credentials
         uses: azure/aks-set-context@v3
         with:
-          resource-group: ${{ env.AKS_RESOURCE_GROUP }}
+          resource-group: ${{ env.RESOURCE_GROUP }}
           cluster-name: ${{ env.CLUSTER_NAME }}
 
       - name: Install Velero CLI
         run: |
-          curl -L https://github.com/vmware-tanzu/velero/releases/download/v1.16.1/velero-v1.16.1-linux-amd64.tar.gz | tar -xz
-          sudo mv velero-v1.16.1-linux-amd64/velero /usr/local/bin
+          curl -L https://github.com/vmware-tanzu/velero/releases/download/v1.13.2/velero-v1.13.2-linux-amd64.tar.gz | tar -xz
+          sudo mv velero-v1.13.2-linux-amd64/velero /usr/local/bin
 
       - name: Write Velero Azure credentials
         run: |
-          mkdir -p credentials
-          cat << EOF > credentials/cloud
-          AZURE_SUBSCRIPTION_ID=${AZURE_SUBSCRIPTION_ID}
-          AZURE_TENANT_ID=${AZURE_TENANT_ID}
-          AZURE_CLIENT_ID=${AZURE_VELERO_CLIENT_ID}
-          AZURE_CLIENT_SECRET=${AZURE_VELERO_SECRET}
-          AZURE_RESOURCE_GROUP=${AZURE_RESOURCE_GROUP}
-          EOF
+          echo '${{ secrets.AZURE_CREDENTIALS }}' > credentials-velero-azure.json
+
       - name: Install Velero to AKS
         run: |
           velero install \
             --provider azure \
             --plugins velero/velero-plugin-for-microsoft-azure:v1.7.0 \
             --bucket $CONTAINER_NAME \
-            --secret-file ./credentials/cloud \
+            --secret-file ./credentials-velero-azure.json \
             --backup-location-config resourceGroup=${{ env.RESOURCE_GROUP }},storageAccount=$STORAGE_ACCOUNT_NAME \
             --use-node-agent \
+            --default-volumes-to-fs-backup \
             --velero-pod-cpu-request=200m \
             --velero-pod-mem-request=128Mi \
             --node-agent-pod-cpu-request=200m \
             --node-agent-pod-mem-request=256Mi
 
       - name: Wait for Velero to be Ready
-        run: sleep 10
+        run: sleep 20
 
       - name: Trigger Backup
         run: |
           TIMESTAMP=$(date +%Y%m%d%H%M)
           velero backup create aks-backup-$TIMESTAMP --include-namespaces default
-
-      - name: Wait for Velero Backup
-        run: sleep 20
 
       - name: Show Backups
         run: velero backup get
