AKS Velero Backup Testing

--- a/.github/workflows/velerobackupgke.yml
+++ b/.github/workflows/velerobackupgke.yml
@@ -96,6 +96,7 @@ jobs:
     env:
       CLUSTER_NAME: aks-multicloud-dr
       RESOURCE_GROUP: MC_my-tfstate-rg_aks-multicloud-dr_eastus
+      AKS_RESOURCE_GROUP: my-tfstate-rg
       AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       STORAGE_ACCOUNT_NAME: veleroaksbackupstorage
       CONTAINER_NAME: velero
@@ -112,7 +113,7 @@ jobs:
       - name: Set AKS Credentials
         uses: azure/aks-set-context@v3
         with:
-          resource-group: ${{ env.RESOURCE_GROUP }}
+          resource-group: ${{ env.AKS_RESOURCE_GROUP }}
           cluster-name: ${{ env.CLUSTER_NAME }}
 
       - name: Install Velero CLI
