AKS Velero Backup Testing

--- a/.github/workflows/velerobackupgke.yml
+++ b/.github/workflows/velerobackupgke.yml
@@ -98,6 +98,9 @@ jobs:
       RESOURCE_GROUP: MC_my-tfstate-rg_aks-multicloud-dr_eastus
       AKS_RESOURCE_GROUP: my-tfstate-rg
       AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      AZURE_CLIENT_ID: 126f95bb-66f7-49ac-9cd5-3a146b63f2ae
+      AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+      AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CREDENTIALS }}
       STORAGE_ACCOUNT_NAME: veleroaksbackupstorage
       CONTAINER_NAME: velero
 
@@ -123,7 +126,13 @@ jobs:
 
       - name: Write Velero Azure credentials
         run: |
-          echo '${{ secrets.AZURE_CREDENTIALS }}' > credentials-velero-azure.json
+         cat << EOF  > ./credentials-velero
+         AZURE_SUBSCRIPTION_ID=${AZURE_SUBSCRIPTION_ID}
+         AZURE_TENANT_ID=${AZURE_TENANT_ID}
+         AZURE_CLIENT_ID=${AZURE_CLIENT_ID}
+         AZURE_CLIENT_SECRET=${AZURE_CLIENT_SECRET}
+         AZURE_RESOURCE_GROUP=${RESOURCE_GROUP}
+         EOF
 
       - name: Install Velero to AKS
         run: |
@@ -131,7 +140,7 @@ jobs:
             --provider azure \
             --plugins velero/velero-plugin-for-microsoft-azure:v1.7.0 \
             --bucket $CONTAINER_NAME \
-            --secret-file ./credentials-velero-azure.json \
+            --secret-file ./credentials-velero \
             --backup-location-config resourceGroup=${{ env.RESOURCE_GROUP }},storageAccount=$STORAGE_ACCOUNT_NAME \
             --use-node-agent \
             --default-volumes-to-fs-backup \
