--- a/.github/workflows/velerobackupgke.yml
+++ b/.github/workflows/velerobackupgke.yml
@@ -117,10 +117,9 @@ jobs:
 
       - name: Install Velero CLI
         run: |
-          curl -L https://github.com/vmware-tanzu/velero/releases/latest/download/velero-linux-amd64.tar.gz | tar -xz
-          sudo mv velero-*-linux-amd64/velero /usr/local/bin
-
-
+          curl -L https://github.com/vmware-tanzu/velero/releases/download/v1.13.2/velero-v1.13.2-linux-amd64.tar.gz | tar -xz
+          sudo mv velero-v1.13.2-linux-amd64/velero /usr/local/bin
+          
       - name: Create Velero credentials file
         run: |
           cat <<EOF > credentials-velero
