GKE & AKS Velero Backup Testing

--- a/.github/workflows/VeleroBackupPipeline.yml
+++ b/.github/workflows/VeleroBackupPipeline.yml
@@ -85,9 +85,9 @@ jobs:
 
       - name: Wait Backup Process
         run: |
-         sleep 20
+         sleep 30
 
-      - name: Show Backups
+      - name: Show Backups Status
         run: velero backup get
 
   AKS-Cluster-velero-backup:
@@ -153,7 +153,7 @@ jobs:
           velero backup create aks-backup-$TIMESTAMP --include-namespaces default
       
       - name: Wait for Velero Progress
-        run: sleep 20
+        run: sleep 30
 
-      - name: Show Backups
+      - name: Show Backups Status
         run: velero backup get
