--- a/.github/workflows/VeleroBackupPipeline.yml
+++ b/.github/workflows/VeleroBackupPipeline.yml
@@ -5,10 +5,79 @@ on:
   #   - cron: '0 2 * * *'  # Run daily at 2 AM UTC
   push:
     branches:
-      - velvobackuptest
+      - dev
   workflow_dispatch:
 
 jobs:
+  AKS-Cluster-velero-backup:
+    runs-on: ubuntu-latest
+    env:
+      CLUSTER_NAME: aks-multicloud-dr
+      AKS_RESOURCE_GROUP: my-tfstate-rg
+      RESOURCE_GROUP: velerorcgroup
+      STORAGE_ACCOUNT_NAME: veleroaksbackupstorage
+      CONTAINER_NAME: velero
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Set AKS context
+        uses: azure/aks-set-context@v3
+        with:
+          resource-group: ${{ env.AKS_RESOURCE_GROUP }}
+          cluster-name: ${{ env.CLUSTER_NAME }}
+
+      - name: Install Velero CLI
+        run: |
+          curl -L https://github.com/vmware-tanzu/velero/releases/download/v1.13.2/velero-v1.13.2-linux-amd64.tar.gz | tar -xz
+          sudo mv velero-v1.13.2-linux-amd64/velero /usr/local/bin
+          
+      - name: Create Velero credentials file
+        run: |
+          cat <<EOF > credentials-velero
+          AZURE_SUBSCRIPTION_ID=${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          AZURE_TENANT_ID=${{ secrets.AZURE_TENANT_ID }}
+          AZURE_CLIENT_ID=${{ secrets.AZURE_CLIENT_ID }}
+          AZURE_CLIENT_SECRET=${{ secrets.AZURE_CLIENT_SECRET }}
+          AZURE_RESOURCE_GROUP=${{ env.RESOURCE_GROUP }}
+          EOF
+
+      - name: Install Velero on AKS
+        run: |
+          velero install \
+            --provider azure \
+            --plugins velero/velero-plugin-for-microsoft-azure:v1.7.0 \
+            --bucket ${{ env.CONTAINER_NAME }} \
+            --secret-file ./credentials-velero \
+            --backup-location-config resourceGroup=${{ env.RESOURCE_GROUP }},storageAccount=${{ env.STORAGE_ACCOUNT_NAME }} \
+            --use-node-agent \
+            --default-volumes-to-fs-backup \
+            --velero-pod-cpu-request=200m \
+            --velero-pod-mem-request=128Mi \
+            --node-agent-pod-cpu-request=200m \
+            --node-agent-pod-mem-request=256Mi
+
+      - name: Wait for Velero pods
+        run: sleep 10
+
+      - name: Trigger Backup
+        run: |
+          TIMESTAMP=$(date +%Y%m%d%H%M)
+          velero backup create daily-backup-$TIMESTAMP --include-namespaces default
+      
+      - name: Wait for Velero Progress
+        run: sleep 40
+
+      - name: Show Backups Status
+        run: velero backup get
+
+
   GKE-Cluster-velero-backup:
     runs-on: ubuntu-latest
 
@@ -85,75 +154,7 @@ jobs:
 
       - name: Wait Backup Process
         run: |
-         sleep 30
-
-      - name: Show Backups Status
-        run: velero backup get
-
-  AKS-Cluster-velero-backup:
-    runs-on: ubuntu-latest
-    env:
-      CLUSTER_NAME: aks-multicloud-dr
-      AKS_RESOURCE_GROUP: my-tfstate-rg
-      RESOURCE_GROUP: velerorcgroup
-      STORAGE_ACCOUNT_NAME: veleroaksbackupstorage
-      CONTAINER_NAME: velero
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Azure Login
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-      - name: Set AKS context
-        uses: azure/aks-set-context@v3
-        with:
-          resource-group: ${{ env.AKS_RESOURCE_GROUP }}
-          cluster-name: ${{ env.CLUSTER_NAME }}
-
-      - name: Install Velero CLI
-        run: |
-          curl -L https://github.com/vmware-tanzu/velero/releases/download/v1.13.2/velero-v1.13.2-linux-amd64.tar.gz | tar -xz
-          sudo mv velero-v1.13.2-linux-amd64/velero /usr/local/bin
-          
-      - name: Create Velero credentials file
-        run: |
-          cat <<EOF > credentials-velero
-          AZURE_SUBSCRIPTION_ID=${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          AZURE_TENANT_ID=${{ secrets.AZURE_TENANT_ID }}
-          AZURE_CLIENT_ID=${{ secrets.AZURE_CLIENT_ID }}
-          AZURE_CLIENT_SECRET=${{ secrets.AZURE_CLIENT_SECRET }}
-          AZURE_RESOURCE_GROUP=${{ env.RESOURCE_GROUP }}
-          EOF
-
-      - name: Install Velero on AKS
-        run: |
-          velero install \
-            --provider azure \
-            --plugins velero/velero-plugin-for-microsoft-azure:v1.7.0 \
-            --bucket ${{ env.CONTAINER_NAME }} \
-            --secret-file ./credentials-velero \
-            --backup-location-config resourceGroup=${{ env.RESOURCE_GROUP }},storageAccount=${{ env.STORAGE_ACCOUNT_NAME }} \
-            --use-node-agent \
-            --default-volumes-to-fs-backup \
-            --velero-pod-cpu-request=200m \
-            --velero-pod-mem-request=128Mi \
-            --node-agent-pod-cpu-request=200m \
-            --node-agent-pod-mem-request=256Mi
-
-      - name: Wait for Velero pods
-        run: sleep 10
-
-      - name: Trigger Backup
-        run: |
-          TIMESTAMP=$(date +%Y%m%d%H%M)
-          velero backup create daily-backup-$TIMESTAMP --include-namespaces default
-      
-      - name: Wait for Velero Progress
-        run: sleep 30
+         sleep 40
 
       - name: Show Backups Status
         run: velero backup get
